--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 .right {
     width: 75vw;
+    position: relative;
 }
 
 
@@ -73,6 +74,7 @@ body {
     display: flex;
     justify-content: space-between;
     background-color: rgb(34, 34, 34);
+    height: 72px;
 }
 
 .header > *{
@@ -81,6 +83,7 @@ body {
 
 .spotifyPlaylists{
     padding: 16px;
+
 }
 
 .cardContainer{
@@ -130,6 +133,10 @@ body {
     top: 168px;
 }
 
+.card:hover {
+    cursor: pointer;
+}
+
 .signBtn{
     background-color: #222222;
     color: rgb(167, 165, 165);
@@ -149,15 +156,32 @@ body {
 .loginBtn{
     background-color: #ffffff;
     color: rgb(0, 0, 0);
-    font-weight: bold;
-    border-radius: 20px ;
+    border-radius: 25px ;
     outline: none;
     font-size: 14px;
     padding: 10px;
+    width: 80px;
+    font-weight: bold;
 }
 
 .loginBtn:hover{
     color: rgb(0, 0, 0);
     font-size: 15px;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.playbar{
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    padding: 12px;
+}
+
+.songButtons{
+    display: flex;
+    justify-content: center;
+    gap: 12px;
 }
